--- a/technote.toml
+++ b/technote.toml
@@ -21,3 +21,10 @@ orcid = "https://orcid.org/0000-0002-3623-0161"
 name = "SLAC National Accelerator Laboratory"
 internal_id = "SLAC"
 address = "2575 Sand Hill Rd., Menlo Park, CA 94025, USA"
+[[technote.authors]]
+name = {given = "Jeremy", family = "McCormick"}
+internal_id = "mccormickj"
+[[technote.authors.affiliations]]
+name = "SLAC National Accelerator Laboratory"
+internal_id = "SLAC"
+address = "2575 Sand Hill Rd., Menlo Park, CA 94025, USA"
